# TessA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: tcbounds.glsl  tebounds.glsl
shaders/GGB/: tctensorx.glsl  tetensorx.glsl
shaders/GSP/: tcgreg3expl.glsl  tcgreg4expl.glsl  tcgreg5expl.glsl  tcgreg6expl.glsl  tcgreg7expl.glsl  tcgreg8expl.glsl  tegreg3expl.glsl  tegreg4expl.glsl  tegreg5expl.glsl  tegreg6expl.glsl  tegreg7expl.glsl  tegreg8expl.glsl
shaders/acc/: tcaccx.glsl  teaccx.glsl
shaders/acc1/: tcacc1bs.glsl  teacc1.glsl  teacc1bs.glsl
shaders/flat/: tcflatx.glsl  tepolyflat.glsl  tepolyflatsq.glsl
shaders/frag/: colorpointshader.glsl  flatfragphongshader.glsl  flatfragshader.glsl  flatisofragshader.glsl  fragcontrolshader.glsl  fragshader.glsl  fragshaderqm.glsl  gbcparamshader.glsl  gbcshader.glsl  isophoteshader.glsl  isophoteshaderqm.glsl  noiseshader.glsl  normalfragshader.glsl  sliceshader.glsl  uvshader.glsl
shaders/gbs/: tcgbsbezgfdsgx.glsl  tcgbsgbbezx.glsl  tcgbsx.glsl  tebspline.glsl  tegbsbezfgdx.glsl  tegbsgbbezx.glsl  tegbsx.glsl
shaders/geom/: boundcurvegeom.glsl  controlnetvisgeom.glsl  controlnetvisgeomCT.glsl  controlnetvisgeomGB.glsl  geometryshader.glsl  (+11 more)
src/: .gitignore  CMakeLists.txt  Shader.cpp  Shader.h  coordinatetexture.cpp  coordinatetexture.h  customopenglwidget.cpp  customopenglwidget.h  customwidgetevents.cpp  enums.h  main.cpp  model.cpp  model.h  objectreader.cpp  objectreader.h  polygon.cpp  polygon.h  polygonshader.cpp  polygonshader.h  renderparameters.cpp  renderparameters.h  tessa.cpp  tessa.h
(+139 files in other folders)
